# head-disease-prediction

./: .gitignore  Dockerfile  README.md  pyproject.toml
resources/: headers.html
resources/processed/: analysis.parquet  headers.json  selected_headers.json  test.parquet
src/: dataset.py  dataset_headers.py  exploration.ipynb  explore.ipynb  process_raw_dataset.py  train.ipynb
src/commands/: command.py  correlation_matrix_command.py  describe_analysis_dataframe_command.py  handle_numerical_command.py  load_raw_dataset_command.py  merge_dataset_header_command.py  parse_header_description_command.py  parse_header_positions_command.py  question_plot_bar_command.py  remove_empty_columns_command.py  remove_nan_on_target_command.py  select_filtered_headers_command.py  set_binary_target_command.py  set_types_command.py  split_train_analysis_command.py  split_train_test_command.py  store_train_test_analysis_command.py  unzip_raw_asc_file_command.py  write_dataset_as_json_zip_command.py  write_dataset_as_parquet_command.py  write_headers_json_command.py
src/pipelines/: all_pipelines.py  builder.py  decision_tree_pipeline.py  logistic_regression_pipeline.py  mlp_pipeline.py  random_forest_pipeline.py
src/sk/: all.py  enhanced_grid_search.py  gs_cv.py  vis.py
src/tps/: types.py
src/types/: types.py
src/util/: bar_plot.py  pandas_utils.py  plots.py  scikitlearn_utils.py
