[tool.poetry]
name = "heart-disease-prediction"
version = "0.1.0"
description = ""
authors = ["gabfssilva <gabfssilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
pandas = "^2.2.1"
imbalanced-learn = "^0.12.2"
plotly = "^5.20.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
