[tool.poetry]
name = "heart-disease-prediction"
version = "0.1.0"
description = ""
authors = ["gabfssilva <gabfssilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
pandas = "^2.2.1"
imbalanced-learn = "^0.12.2"
plotly = "^5.20.0"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
pyarrow = "^16.0.0"
jupyter = "^1.0.0"
statsmodels = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
